--- a/kids.html
+++ b/kids.html
@@ -57,7 +57,7 @@
   </div>
   <div class="page">
     <!-- Page Header-->
-    <header class="section page-header">
+    <header class="section page-header" >
       <!-- RD Navbar-->
       <div class="rd-navbar-wrap">
         <nav class="rd-navbar rd-navbar-modern" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed"
@@ -65,8 +65,8 @@
           data-lg-device-layout="rd-navbar-fixed" data-xl-layout="rd-navbar-static"
           data-xl-device-layout="rd-navbar-static" data-xxl-layout="rd-navbar-static"
           data-xxl-device-layout="rd-navbar-static" data-lg-stick-up-offset="56px" data-xl-stick-up-offset="56px"
-          data-xxl-stick-up-offset="56px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true">
-          <div class="rd-navbar-inner-outer"style="background-color:pink;">
+          data-xxl-stick-up-offset="56px" data-lg-stick-up="true" data-xl-stick-up="true" data-xxl-stick-up="true" >
+          <div class="rd-navbar-inner-outer" style="background-color:pink;">
             <div class="rd-navbar-inner">
               <!-- RD Navbar Panel-->
               <div class="rd-navbar-panel">
@@ -77,7 +77,7 @@
                       src="images/ageone.png" alt="" width="198" height="66" /></a></div>
               </div>
               <div class="rd-navbar-right rd-navbar-nav-wrap">
-                <div class="rd-navbar-aside">
+                <div class="rd-navbar-aside" >
                   <ul class="rd-navbar-contacts-2">
                     <li>
                       <div class="unit unit-spacing-xs">
@@ -231,12 +231,12 @@
     </section>
     <!-- Base Product-->
     <section class="section section-lg bg-default" style="background-color: pink;">
-      <div class="container"style="background-color:#D7D9CE;">
+      <div class="container">
         <h3 class="oh-desktop"><span class="d-inline-block wow slideInUp">Kids Collections</span></h3>
         <div class="row row-lg row-30">
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <!-- Product-->
-            <article class="product wow fadeInLeft" data-wow-delay=".15s">
+            <article class="product wow fadeInLeft" data-wow-delay=".15s" style="background-color:#f0efeb ; border-radius: 6%;">
               <div class="product-figure"><img src="images/product-1-161x162.png" alt="" width="161" height="162" />
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
@@ -244,7 +244,8 @@
                   class="mdi mdi-star text-gray-13"></span></div>
               <h6 class="product-title">Sweatshirts</h6>
               <div class="product-price-wrap">
-                <div class="product-price">$50.00</div>
+                <div class="product-price">$10.00</div> <br>
+                <div class="product-price">₹866.00</div>
               </div>
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
@@ -255,14 +256,15 @@
           </div>
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <!-- Product-->
-            <article class="product wow fadeInLeft" data-wow-delay=".1s">
+            <article class="product wow fadeInLeft" data-wow-delay=".1s" style="background-color:#f0efeb ; border-radius: 6%;">
               <div class="product-figure"><img src="images/product-2-161x162.png" alt="" width="161" height="162" />
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
               <h6 class="product-title">hoodies</h6>
               <div class="product-price-wrap">
-                <div class="product-price">$120.00</div>
+                <div class="product-price">$10.00</div> <br>
+                <div class="product-price">₹866.00</div>
               </div>
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
@@ -273,7 +275,7 @@
           </div>
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <!-- Product-->
-            <article class="product wow fadeInLeft" data-wow-delay=".05s">
+            <article class="product wow fadeInLeft" data-wow-delay=".05s" style="background-color:#f0efeb ; border-radius: 6%;">
               <div class="product-figure"><img src="images/product-3-161x162.png" alt="" width="161" height="162" />
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
@@ -281,7 +283,8 @@
                   class="mdi mdi-star text-gray-13"></span></div>
               <h6 class="product-title">collared t-shirt</h6>
               <div class="product-price-wrap">
-                <div class="product-price">$150.00</div>
+                <div class="product-price">$10.00</div> <br>
+                <div class="product-price">₹866.00</div>
               </div>
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
@@ -292,15 +295,16 @@
           </div>
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <!-- Product-->
-            <article class="product wow fadeInLeft">
+            <article class="product wow fadeInLeft" style="background-color:#f0efeb ; border-radius: 6%;">
               <div class="product-figure"><img src="images/product-4-161x162.png" alt="" width="161" height="162" />
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
               <h6 class="product-title">Track Pants</h6>
               <div class="product-price-wrap">
-                <div class="product-price product-price-old">$60.00</div>
-                <div class="product-price">$40.00</div>
+                <div class="product-price product-price-old">$25.00</div>
+                <div class="product-price">$15.01</div> <br>
+                  <div class="product-price">₹1299.00</div>
               </div>
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
@@ -311,7 +315,7 @@
           </div>
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <!-- Product-->
-            <article class="product wow fadeInLeft" data-wow-delay=".15s">
+            <article class="product wow fadeInLeft" data-wow-delay=".15s" style="background-color:#f0efeb ; border-radius: 6%;">
               <div class="product-figure"><img src="images/product-5-161x162.png" alt="" width="161" height="162" />
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
@@ -319,7 +323,8 @@
                   class="mdi mdi-star text-gray-13"></span></div>
               <h6 class="product-title">V-neck t-shirts</h6>
               <div class="product-price-wrap">
-                <div class="product-price">$50.00</div>
+                <div class="product-price">$10.00</div> <br>
+                <div class="product-price">₹866.00</div>
               </div>
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
@@ -330,14 +335,15 @@
           </div>
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <!-- Product-->
-            <article class="product wow fadeInLeft" data-wow-delay=".1s">
+            <article class="product wow fadeInLeft" data-wow-delay=".1s" style="background-color:#f0efeb ; border-radius: 6%;">
               <div class="product-figure"><img src="images/product-6-161x162.png" alt="" width="161" height="162" />
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
               <h6 class="product-title">oversized t-shirt</h6>
               <div class="product-price-wrap">
-                <div class="product-price">$120.00</div>
+                <div class="product-price">$10.00</div> <br>
+                <div class="product-price">₹866.00</div>
               </div>
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
@@ -348,7 +354,7 @@
           </div>
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <!-- Product-->
-            <article class="product wow fadeInLeft" data-wow-delay=".05s">
+            <article class="product wow fadeInLeft" data-wow-delay=".05s" style="background-color:#f0efeb ; border-radius: 6%;">
               <div class="product-figure"><img src="images/product-7-161x162.png" alt="" width="161" height="162" />
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
@@ -356,8 +362,9 @@
                   class="mdi mdi-star text-gray-13"></span></div>
               <h6 class="product-title">Round Neck T Shirts</h6>
               <div class="product-price-wrap">
-                <div class="product-price product-price-old">$60.00</div>
-                <div class="product-price">$40.00</div>
+                <div class="product-price product-price-old">$25.00</div>
+                <div class="product-price">$15.01</div> <br>
+                  <div class="product-price">₹1299.00</div>
               </div>
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
@@ -368,14 +375,15 @@
           </div>
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <!-- Product-->
-            <article class="product wow fadeInLeft">
+            <article class="product wow fadeInLeft" style="background-color:#f0efeb ; border-radius: 6%;">
               <div class="product-figure"><img src="images/product-8-161x162.png" alt="" width="161" height="162" />
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
               <h6 class="product-title">Gym Clothings</h6>
               <div class="product-price-wrap">
-                 <div class="product-price">$40.00</div>
+                <div class="product-price">$10.00</div> <br>
+                <div class="product-price">₹866.00</div>
               </div>
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
