--- a/products.html
+++ b/products.html
@@ -244,7 +244,8 @@
                   class="mdi mdi-star text-gray-13"></span></div>
               <h6 class="product-title">Sweatshirts</h6>
               <div class="product-price-wrap">
-                <div class="product-price">$50.00</div>
+                <div class="product-price">$10.00</div> <br>
+                <div class="product-price">₹866.00</div>
               </div>
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
@@ -262,7 +263,8 @@
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
               <h6 class="product-title">hoodies</h6>
               <div class="product-price-wrap">
-                <div class="product-price">$120.00</div>
+                <div class="product-price">$10.00</div> <br>
+                <div class="product-price">₹866.00</div>
               </div>
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
@@ -281,7 +283,8 @@
                   class="mdi mdi-star text-gray-13"></span></div>
               <h6 class="product-title">collared t-shirt</h6>
               <div class="product-price-wrap">
-                <div class="product-price">$150.00</div>
+                <div class="product-price">$10.00</div> <br>
+                <div class="product-price">₹866.00</div>
               </div>
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
@@ -299,8 +302,9 @@
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
               <h6 class="product-title">Track Pants</h6>
               <div class="product-price-wrap">
-                <div class="product-price product-price-old">$60.00</div>
-                <div class="product-price">$40.00</div>
+                <div class="product-price product-price-old">$25.00</div>
+                <div class="product-price">$15.01</div> <br>
+                  <div class="product-price">₹1299.00</div>
               </div>
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
@@ -319,7 +323,8 @@
                   class="mdi mdi-star text-gray-13"></span></div>
               <h6 class="product-title">V-neck t-shirts</h6>
               <div class="product-price-wrap">
-                <div class="product-price">$50.00</div>
+                <div class="product-price">$10.00</div> <br>
+                <div class="product-price">₹866.00</div>
               </div>
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
@@ -337,7 +342,8 @@
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
               <h6 class="product-title">oversized t-shirt</h6>
               <div class="product-price-wrap">
-                <div class="product-price">$120.00</div>
+                <div class="product-price">$10.00</div> <br>
+                <div class="product-price">₹866.00</div>
               </div>
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
@@ -356,8 +362,9 @@
                   class="mdi mdi-star text-gray-13"></span></div>
               <h6 class="product-title">Round Neck T Shirts</h6>
               <div class="product-price-wrap">
-                <div class="product-price product-price-old">$60.00</div>
-                <div class="product-price">$40.00</div>
+                <div class="product-price product-price-old">$25.00</div>
+                <div class="product-price">$15.01</div> <br>
+                  <div class="product-price">₹1299.00</div>
               </div>
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
@@ -375,7 +382,8 @@
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
               <h6 class="product-title">Gym Clothings</h6>
               <div class="product-price-wrap">
-                 <div class="product-price">$40.00</div>
+                <div class="product-price">$10.00</div> <br>
+                <div class="product-price">₹866.00</div>
               </div>
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
