--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                 <div class="services-terri-figure"><img src="images/Collection/formalWear.jpg" alt="" width="370"
                     height="278" /></div>
                 <div class="services-terri-caption"><span class="services-terri-icon linearicons-shirt"></span>
-                  <h5 class="services-terri-title"><a href="#">Oversized t-shirt</a></h5>
+                  <h5 class="services-terri-title"><a href="#">Custom t-shirt</a></h5>
                 </div>
               </article>
             </div>
@@ -355,13 +355,13 @@
           <div class="row justify-content-end">
             <div class="col-sm-8 col-md-7 col-lg-5">
               <div class="cta-modern">
-                <h3 class="cta-modern-title wow fadeInRight">Elevate Your Style</h3>
-                <p class="lead">Zifra Creations offers unparalleled quality and style for the modern man. Explore our
-                  range of premium apparel and accessories.</p>
+                <h3 class="cta-modern-title wow fadeInRight">Global Shipping & Export-Quality Products – Delivered Worldwide!</h3>
+                <p class="lead">Experience seamless worldwide shipping with our top-tier export-quality products! No matter where you are, we ensure timely delivery and premium quality across the globe. Our products meet international standards,
+                   making them perfect for businesses and individuals looking for the best.</p>
                 <p class="cta-modern-text oh-desktop" data-wow-delay=".1s"><span
-                    class="cta-modern-decor wow slideInLeft"></span><span class="d-inline-block wow slideInDown">Zifra
+                    class="cta-modern-decor wow slideInLeft"></span><span class="d-inline-block wow slideInDown">Zifra Creations
                     </span></p>
-                <a class="button button-md button-secondary-2 button-winona wow fadeInUp" href="#"
+                <a class="button button-md button-secondary-2 button-winona wow fadeInUp" href="/products.html"
                   data-wow-delay=".2s">Explore Our Collection</a>
               </div>
             </div>
@@ -386,7 +386,8 @@
                   class="mdi mdi-star text-gray-13"></span></div>
               <h6 class="product-title">Round Neck T Shirts</h6>
               <div class="product-price-wrap">
-                <div class="product-price">$50.00</div>
+                <div class="product-price">$10.00</div> <br>
+                <div class="product-price">₹866.00</div>
               </div>
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
@@ -404,7 +405,8 @@
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
               <h6 class="product-title">hoodies</h6>
               <div class="product-price-wrap">
-                <div class="product-price">$120.00</div>
+                <div class="product-price">$10.00</div> <br>
+                <div class="product-price">₹866.00</div>
               </div>
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
@@ -423,7 +425,8 @@
                   class="mdi mdi-star text-gray-13"></span></div>
               <h6 class="product-title">collared t-shirt</h6>
               <div class="product-price-wrap">
-                <div class="product-price">$150.00</div>
+                <div class="product-price">$10.00</div> <br>
+                <div class="product-price">₹866.00</div>
               </div>
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
@@ -441,8 +444,9 @@
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
               <h6 class="product-title">Track Pants</h6>
               <div class="product-price-wrap">
-                <div class="product-price product-price-old">$60.00</div>
-                <div class="product-price">$40.00</div>
+                <div class="product-price product-price-old">$25.00</div>
+                <div class="product-price">$15.01</div> <br>
+                  <div class="product-price">₹1299.00</div>
               </div>
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
