--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 <div class="services-terri-figure"><img src="images/Collection/causalShirt.jpg" alt="" width="370"
                     height="278" /></div>
                 <div class="services-terri-caption"><span class="services-terri-icon linearicons-shirt"></span>
-                  <h5 class="services-terri-title"><a href="#">collared t-shirt</a></h5>
+                  <h5 class="services-terri-title"><a href="#">collared T-shirt</a></h5>
                 </div>
               </article>
             </div>
@@ -291,7 +291,7 @@
                 <div class="services-terri-figure"><img src="images/Collection/formalWear.jpg" alt="" width="370"
                     height="278" /></div>
                 <div class="services-terri-caption"><span class="services-terri-icon linearicons-shirt"></span>
-                  <h5 class="services-terri-title"><a href="#">Custom t-shirt</a></h5>
+                  <h5 class="services-terri-title"><a href="#">Custom T-shirt</a></h5>
                 </div>
               </article>
             </div>
@@ -303,7 +303,7 @@
                 <div class="services-terri-figure"><img src="images/Collection/jackets.jpg" alt="" width="370"
                     height="278" /></div>
                 <div class="services-terri-caption"><span class="services-terri-icon linearicons-shirt"></span>
-                  <h5 class="services-terri-title"><a href="#">Round Neck T Shirts</a></h5>
+                  <h5 class="services-terri-title"><a href="#">Round Neck T-Shirts</a></h5>
                 </div>
               </article>
             </div>
@@ -339,7 +339,7 @@
                 <div class="services-terri-figure"><img src="images/Collection//footwear.jpg" alt="" width="370"
                     height="278" /></div>
                 <div class="services-terri-caption"><span class="services-terri-icon linearicons-shirt"></span>
-                  <h5 class="services-terri-title"><a href="#">hoodies</a></h5>
+                  <h5 class="services-terri-title"><a href="#">Hoodies</a></h5>
                 </div>
               </article>
             </div>
@@ -446,7 +446,8 @@
               <div class="product-price-wrap">
                 <div class="product-price product-price-old">$25.00</div>
                 <div class="product-price">$15.01</div> <br>
-                  <div class="product-price">₹1299.00</div>
+                <div class="product-price product-price-old">₹2175.00</div>
+                <div class="product-price">₹1299.00</div>
               </div>
               <div class="product-button">
                 <!-- <div class="button-wrap"><a class="button button-xs button-primary button-winona" href="#">Add to
@@ -572,15 +573,11 @@
         <div class="container">
           <div class="row row-50">
             <div class="col-md-6 col-lg-4">
-              <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Zifra
-                  Collection</span></h5>
+              <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Zifra Creations</span></h5>
               <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
-                <li><a href="#">Exclusive Pieces</a></li>
-                <li><a href="#">Limited Editions</a></li>
-                <li><a href="#">Artisan Creations</a></li>
-                <li><a href="#">Special Offers</a></li>
-                <li><a href="#">About Zifra</a></li>
-                <li><a href="contacts.html">Contact Us</a></li>
+                <li><a href="#">Custom Pieces</a></li>
+                <li><a href="#">Limited Deals</a></li>
+                <li><a href="/about-us.html">About Zifra</a></li>
               </ul>
             </div>
             <div class="col-md-6 col-lg-4 col-xl-3">
@@ -588,11 +585,10 @@
               </h5>
               <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
                 <li><a href="about-us.html">About Us</a></li>
-                <li><a href="#">Latest News</a></li>
-                <li><a href="#">Our Collection</a></li>
+                <li><a href="/products.html">Our Collection</a></li>
                 <li><a href="#">FAQ</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="contacts.html">Contact Us</a></li>
+                <li><a href="/products.html">Shop</a></li>
+                <li><a href="contacts.html">Contact Us</a></li> 
               </ul>
             </div>
             <div class="col-lg-4 col-xl-5">
