--- a/quote.html
+++ b/quote.html
@@ -357,20 +357,16 @@
       </form>
     </div>
     <!-- Page Footer-->
-    <footer class="section footer-modern context-dark footer-modern-2">
+   <footer class="section footer-modern context-dark footer-modern-2">
       <div class="footer-modern-line">
         <div class="container">
           <div class="row row-50">
             <div class="col-md-6 col-lg-4">
-              <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Zifra
-                  Collection</span></h5>
+              <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Zifra Creations</span></h5>
               <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
-                <li><a href="#">Exclusive Pieces</a></li>
-                <li><a href="#">Limited Editions</a></li>
-                <li><a href="#">Artisan Creations</a></li>
-                <li><a href="#">Special Offers</a></li>
-                <li><a href="#">About Zifra</a></li>
-                <li><a href="contacts.html">Contact Us</a></li>
+                <li><a href="#">Custom Design</a></li>
+                <li><a href="#">Export Quality</a></li>
+                <li><a href="/about-us.html">About Zifra</a></li>
               </ul>
             </div>
             <div class="col-md-6 col-lg-4 col-xl-3">
@@ -378,11 +374,10 @@
               </h5>
               <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
                 <li><a href="about-us.html">About Us</a></li>
-                <li><a href="#">Latest News</a></li>
-                <li><a href="#">Our Collection</a></li>
+                <li><a href="/products.html">Our Collection</a></li>
                 <li><a href="#">FAQ</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="contacts.html">Contact Us</a></li>
+                <li><a href="/products.html">Shop</a></li>
+                <li><a href="contacts.html">Contact Us</a></li> 
               </ul>
             </div>
             <div class="col-lg-4 col-xl-5">
