--- a/kids.html
+++ b/kids.html
@@ -237,12 +237,12 @@
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <!-- Product-->
             <article class="product wow fadeInLeft" data-wow-delay=".15s" style="background-color:#f0efeb ; border-radius: 6%;">
-              <div class="product-figure"><img src="images/product-1-161x162.png" alt="" width="161" height="162" />
+              <div class="product-figure"><img src="images/k1.jpg" alt="" width="161" height="162" />
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star text-gray-13"></span></div>
-              <h6 class="product-title">Sweatshirts</h6>
+              <h6 class="product-title">Kids Half Sleeve T-shirts</h6>
               <div class="product-price-wrap">
                 <div class="product-price">$10.00</div> <br>
                 <div class="product-price">₹866.00</div>
@@ -257,11 +257,11 @@
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <!-- Product-->
             <article class="product wow fadeInLeft" data-wow-delay=".1s" style="background-color:#f0efeb ; border-radius: 6%;">
-              <div class="product-figure"><img src="images/product-2-161x162.png" alt="" width="161" height="162" />
+              <div class="product-figure"><img src="images/k2.jpg" alt="" width="161" height="162" />
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
-              <h6 class="product-title">hoodies</h6>
+              <h6 class="product-title">Kids Nightwears</h6>
               <div class="product-price-wrap">
                 <div class="product-price">$10.00</div> <br>
                 <div class="product-price">₹866.00</div>
@@ -276,12 +276,12 @@
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <!-- Product-->
             <article class="product wow fadeInLeft" data-wow-delay=".05s" style="background-color:#f0efeb ; border-radius: 6%;">
-              <div class="product-figure"><img src="images/product-3-161x162.png" alt="" width="161" height="162" />
+              <div class="product-figure"><img src="images/k3.jpg" alt="" width="161" height="162" />
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star text-gray-13"></span></div>
-              <h6 class="product-title">collared t-shirt</h6>
+              <h6 class="product-title">Kids Customized T-shirts</h6>
               <div class="product-price-wrap">
                 <div class="product-price">$10.00</div> <br>
                 <div class="product-price">₹866.00</div>
@@ -296,11 +296,11 @@
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <!-- Product-->
             <article class="product wow fadeInLeft" style="background-color:#f0efeb ; border-radius: 6%;">
-              <div class="product-figure"><img src="images/product-4-161x162.png" alt="" width="161" height="162" />
+              <div class="product-figure"><img src="images/k4.jpg" alt="" width="161" height="162" />
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
-              <h6 class="product-title">Track Pants</h6>
+              <h6 class="product-title">Kids Collared Half Sleeve T-shirts</h6>
               <div class="product-price-wrap">
                 <div class="product-price product-price-old">$25.00</div>
                 <div class="product-price">$15.01</div> <br>
@@ -317,12 +317,12 @@
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <!-- Product-->
             <article class="product wow fadeInLeft" data-wow-delay=".15s" style="background-color:#f0efeb ; border-radius: 6%;">
-              <div class="product-figure"><img src="images/product-5-161x162.png" alt="" width="161" height="162" />
+              <div class="product-figure"><img src="images/k5.jpg" alt="" width="161" height="162" />
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star text-gray-13"></span></div>
-              <h6 class="product-title">V-neck t-shirts</h6>
+              <h6 class="product-title">Kids Collared Full Sleeve</h6>
               <div class="product-price-wrap">
                 <div class="product-price">$10.00</div> <br>
                 <div class="product-price">₹866.00</div>
@@ -337,11 +337,11 @@
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <!-- Product-->
             <article class="product wow fadeInLeft" data-wow-delay=".1s" style="background-color:#f0efeb ; border-radius: 6%;">
-              <div class="product-figure"><img src="images/product-6-161x162.png" alt="" width="161" height="162" />
+              <div class="product-figure"><img src="images/k6.jpg" alt="" width="161" height="162" />
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
-              <h6 class="product-title">oversized t-shirt</h6>
+              <h6 class="product-title">Kids Full Sleeve T-shirts</h6>
               <div class="product-price-wrap">
                 <div class="product-price">$10.00</div> <br>
                 <div class="product-price">₹866.00</div>
