--- a/about-us.html
+++ b/about-us.html
@@ -459,7 +459,7 @@
             <div class="bg-image-right-1 bg-image-right-lg"><img src="images/abouthistory.jpg" alt="Our History"
                 width="1110" height="710" />
               <div class="link-play-modern"><a class="icon mdi mdi-play" data-lightgallery="item"
-                  href="https://www.youtube.com/watch?v=1UWpbtUupQQ"></a>
+                  href="https://youtu.be/ayJdhVmExTg?si=zLvZubyE3sL2qD_g"></a>
                 <div class="link-play-modern-title">How we<span>Work</span></div>
                 <div class="link-play-modern-decor"></div>
               </div>
