--- a/kids.html
+++ b/kids.html
@@ -356,12 +356,12 @@
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <!-- Product-->
             <article class="product wow fadeInLeft" data-wow-delay=".05s" style="background-color:#f0efeb ; border-radius: 6%;">
-              <div class="product-figure"><img src="images/product-7-161x162.png" alt="" width="161" height="162" />
+              <div class="product-figure"><img src="images/k7.jpg" alt="" width="161" height="162" />
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star text-gray-13"></span></div>
-              <h6 class="product-title">Round Neck T Shirts</h6>
+              <h6 class="product-title">Baby Rompers</h6>
               <div class="product-price-wrap">
                 <div class="product-price product-price-old">$25.00</div>
                 <div class="product-price">$15.01</div> <br>
@@ -378,11 +378,11 @@
           <div class="col-sm-6 col-lg-4 col-xl-3">
             <!-- Product-->
             <article class="product wow fadeInLeft" style="background-color:#f0efeb ; border-radius: 6%;">
-              <div class="product-figure"><img src="images/product-8-161x162.png" alt="" width="161" height="162" />
+              <div class="product-figure"><img src="images/k8.jpg" alt="" width="161" height="162" />
               </div>
               <div class="product-rating"><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span
                   class="mdi mdi-star"></span><span class="mdi mdi-star"></span><span class="mdi mdi-star"></span></div>
-              <h6 class="product-title">Gym Clothings</h6>
+              <h6 class="product-title">Kids Boxers</h6>
               <div class="product-price-wrap">
                 <div class="product-price">$10.00</div> <br>
                 <div class="product-price">₹866.00</div>
