--- a/about-us.html
+++ b/about-us.html
@@ -266,13 +266,13 @@
                 <p>Our mission is to empower men with stylish and comfortable clothing that boosts confidence and
                   reflects their unique personality. We strive to provide a shopping experience that is as exceptional
                   as our products, making Zifra Creations the go-to destination for unisex fashion.</p><img
-                  src="images/aboutsection.jpg" alt="Our Mission" width="835" height="418" />
+                  src="images/a2.png" alt="Our Mission" width="835" height="418" />
               </div>
               <div class="tab-pane fade" id="tabs-4-3">
                 <h4>Our Goals</h4>
                 <p>Our goal is to continuously innovate and expand our product line, offering our customers the latest
                   in unisex fashion. We aim to become a leading name in the fashion industry, known for our dedication to
-                  quality, style, and customer satisfaction.</p><img src="images/aboutsection.jpg" alt="Our Goals"
+                  quality, style, and customer satisfaction.</p><img src="images/a1.png" alt="Our Goals"
                   width="835" height="418" />
               </div>
               <div class="tab-pane fade" id="tabs-4-4">
@@ -280,7 +280,7 @@
                 <p>Integrity, quality, and customer satisfaction are the core values that drive everything we do at
                   Zifra Creations. We are committed to providing our customers with clothing that is not only stylish
                   but also durable and comfortable, ensuring they feel confident in every outfit they wear.</p><img
-                  src="images/aboutsection.jpg" alt="Our Values" width="835" height="418" />
+                  src="images/a3.png" alt="Our Values" width="835" height="418" />
               </div>
             </div>
           </div>
